# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

exports_files([
    "binary.cmake",
    "elf_machine_map.inl",
    "selectors.cmake",
    "target_map.cmake",
    "target_map.py",
])

cc_library(
    name = "target_map_h",
    hdrs = ["target_map.h"],
    include_prefix = "build_tools/amdgpu",
)
