# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "cc_compiler_clang",
    flag_values = {
        "@rules_cc//cc/compiler:compiler": "clang",
    },
)

config_setting(
    name = "cc_compiler_clang_cl",
    flag_values = {
        "@rules_cc//cc/compiler:compiler": "clang-cl",
    },
)

config_setting(
    name = "cc_compiler_gcc",
    flag_values = {
        "@rules_cc//cc/compiler:compiler": "gcc",
    },
)

config_setting(
    name = "cc_compiler_msvc",
    flag_values = {
        "@rules_cc//cc/compiler:compiler": "msvc-cl",
    },
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)
