# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

exports_files([
    "deps.MODULE.bazel",
])

py_test(
    name = "configure_test",
    srcs = [
        "configure.py",
        "configure_test.py",
    ],
    main = "configure_test.py",
)

py_binary(
    name = "compile_commands_merge",
    srcs = ["compile_commands_merge.py"],
    main = "compile_commands_merge.py",
)

py_library(
    name = "compile_commands_merge_lib",
    srcs = ["compile_commands_merge.py"],
)

py_test(
    name = "compile_commands_merge_test",
    srcs = [
        "compile_commands_merge.py",
        "compile_commands_merge_test.py",
    ],
    main = "compile_commands_merge_test.py",
)

config_setting(
    name = "cc_compiler_clang",
    flag_values = {
        "@rules_cc//cc/compiler:compiler": "clang",
    },
)

config_setting(
    name = "cc_compiler_clang_cl",
    flag_values = {
        "@rules_cc//cc/compiler:compiler": "clang-cl",
    },
)

config_setting(
    name = "cc_compiler_gcc",
    flag_values = {
        "@rules_cc//cc/compiler:compiler": "gcc",
    },
)

config_setting(
    name = "cc_compiler_msvc",
    flag_values = {
        "@rules_cc//cc/compiler:compiler": "msvc-cl",
    },
)
