# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "config_test",
    srcs = [
        "bazel_to_cmake_config.py",
        "bazel_to_cmake_targets.py",
        "config_test.py",
    ],
)

py_test(
    name = "deps_test",
    srcs = [
        "deps.py",
        "deps_test.py",
    ],
)
