# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

package(default_visibility = ["//visibility:public"])

exports_files([
    "llvm_repo.bzl",
])

filegroup(
    name = "plugin_sources",
    srcs = glob([
        "iree/*.cc",
        "iree/*.h",
    ]),
)

filegroup(
    name = "cmake_project",
    srcs = [
        "CMakeLists.txt",
        "README.md",
        ":plugin_sources",
    ],
)

filegroup(
    name = "testdata",
    srcs = glob(["test/*"]),
)
