# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@iree_clang_tidy_llvm//:config.bzl", "CLANG_TIDY_LLVM_COPTS", "CLANG_TIDY_LLVM_TARGET_COMPATIBLE_WITH")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load(":clang_tidy.bzl", "iree_clang_tidy")

package(default_visibility = ["//visibility:public"])

exports_files([
    "clang_tidy.bzl",
    "llvm_repo.bzl",
])

filegroup(
    name = "plugin_sources",
    srcs = glob([
        "iree/*.cc",
        "iree/*.h",
    ]),
)

filegroup(
    name = "cmake_project",
    srcs = [
        "CMakeLists.txt",
        "README.md",
        ":plugin_sources",
    ],
)

filegroup(
    name = "testdata",
    srcs = glob(["test/*"]),
)

py_binary(
    name = "run_clang_tidy_action",
    srcs = ["run_clang_tidy_action.py"],
    main = "run_clang_tidy_action.py",
)

cc_binary(
    name = "IREEClangTidyPlugin.so",
    srcs = [
        "iree/IreeTidyModule.cc",
        "iree/SmokeCheck.cc",
        "iree/SmokeCheck.h",
        "iree/StatusChecks.cc",
        "iree/StatusChecks.h",
    ],
    copts = CLANG_TIDY_LLVM_COPTS,
    includes = ["."],
    linkshared = True,
    tags = ["manual"],
    target_compatible_with = CLANG_TIDY_LLVM_TARGET_COMPATIBLE_WITH,
    deps = [
        "@iree_clang_tidy_llvm//:llvm_headers",
    ],
)

py_test(
    name = "plugin_smoke_test",
    srcs = [
        "test/clang_tidy_test.py",
        "test/smoke_test.py",
    ],
    args = [
        "--clang-tidy=$(location @iree_clang_tidy_llvm//:clang-tidy)",
        "--plugin=$(location :IREEClangTidyPlugin.so)",
    ],
    data = [
        "test/smoke.c",
        ":IREEClangTidyPlugin.so",
        "@iree_clang_tidy_llvm//:clang-tidy",
    ],
    imports = ["test"],
    main = "test/smoke_test.py",
    tags = ["manual"],
    target_compatible_with = CLANG_TIDY_LLVM_TARGET_COMPATIBLE_WITH,
)

py_test(
    name = "status_checks_test",
    srcs = [
        "test/clang_tidy_test.py",
        "test/status_checks_test.py",
    ],
    args = [
        "--clang-tidy=$(location @iree_clang_tidy_llvm//:clang-tidy)",
        "--plugin=$(location :IREEClangTidyPlugin.so)",
    ],
    data = [
        "test/status_checks.c",
        ":IREEClangTidyPlugin.so",
        "@iree_clang_tidy_llvm//:clang-tidy",
    ],
    imports = ["test"],
    main = "test/status_checks_test.py",
    tags = ["manual"],
    target_compatible_with = CLANG_TIDY_LLVM_TARGET_COMPATIBLE_WITH,
)

cc_library(
    name = "action_smoke_subject",
    testonly = True,
    srcs = ["test/action_smoke.c"],
    tags = ["manual"],
)

iree_clang_tidy(
    name = "action_smoke",
    testonly = True,
    tags = ["manual"],
    targets = [":action_smoke_subject"],
)
