# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "devtools",
    srcs = [
        "__init__.py",
        "aliases.py",
        "bazel.py",
        "ci.py",
        "ci_config.py",
        "cli.py",
        "cmake.py",
        "cmake_file_api.py",
        "cmake_fuzz.py",
        "cmake_try.py",
        "command_plan.py",
        "doctor.py",
        "environment.py",
        "fuzz.py",
        "help_text.py",
        "hooks.py",
        "importers.py",
        "presubmit.py",
        "project_presubmit.py",
        "setup.py",
        "smoke_test_lib.py",
        "source_lock.py",
    ],
    deps = ["//build_tools/bazel:compile_commands_merge_lib"],
)

py_binary(
    name = "ci",
    srcs = [
        "__init__.py",
        "ci.py",
        "ci_config.py",
    ],
)

py_binary(
    name = "bazel_smoke_test",
    srcs = [
        "__init__.py",
        "bazel_smoke_test.py",
        "smoke_test_lib.py",
    ],
    imports = ["build_tools/devtools"],
    main = "bazel_smoke_test.py",
)

py_binary(
    name = "cli_smoke_test",
    srcs = [
        "__init__.py",
        "cli_smoke_test.py",
        "smoke_test_lib.py",
    ],
    imports = ["build_tools/devtools"],
    main = "cli_smoke_test.py",
)

py_binary(
    name = "cmake_smoke_test",
    srcs = [
        "__init__.py",
        "cmake_smoke_test.py",
        "smoke_test_lib.py",
    ],
    imports = ["build_tools/devtools"],
    main = "cmake_smoke_test.py",
)

py_test(
    name = "ci_test",
    srcs = [
        "__init__.py",
        "ci.py",
        "ci_config.py",
        "ci_test.py",
    ],
    data = [
        "//:.github/scripts/check_vulkan_hardware_environment.sh",
        "//:.github/workflows/ci_core_linux.yml",
        "//:.github/workflows/ci_importers.yml",
        "//:.github/workflows/ci_iree_bazel.yml",
        "//:.github/workflows/ci_iree_cmake.yml",
    ],
    main = "ci_test.py",
)

py_test(
    name = "cli_test",
    srcs = [
        "aliases.py",
        "bazel.py",
        "cli.py",
        "cli_test.py",
        "cmake.py",
        "cmake_file_api.py",
        "cmake_fuzz.py",
        "cmake_try.py",
        "command_plan.py",
        "doctor.py",
        "environment.py",
        "fuzz.py",
        "help_text.py",
        "hooks.py",
        "importers.py",
        "presubmit.py",
        "setup.py",
    ],
    main = "cli_test.py",
    deps = ["//build_tools/bazel:compile_commands_merge_lib"],
)

py_test(
    name = "cmake_file_api_test",
    srcs = [
        "cmake_file_api.py",
        "cmake_file_api_test.py",
    ],
    main = "cmake_file_api_test.py",
)

py_test(
    name = "cmake_test",
    srcs = [
        "__init__.py",
        "cmake.py",
        "cmake_file_api.py",
        "cmake_fuzz.py",
        "cmake_test.py",
        "cmake_try.py",
        "command_plan.py",
        "environment.py",
        "fuzz.py",
    ],
    main = "cmake_test.py",
)

py_test(
    name = "command_plan_test",
    srcs = [
        "command_plan.py",
        "command_plan_test.py",
    ],
    main = "command_plan_test.py",
)

py_test(
    name = "project_presubmit_test",
    srcs = [
        "project_presubmit.py",
        "project_presubmit_test.py",
    ],
    main = "project_presubmit_test.py",
)

py_test(
    name = "source_lock_test",
    srcs = [
        "source_lock.py",
        "source_lock_test.py",
    ],
    main = "source_lock_test.py",
)

py_test(
    name = "setup_test",
    srcs = [
        "__init__.py",
        "aliases.py",
        "command_plan.py",
        "environment.py",
        "setup.py",
        "setup_test.py",
    ],
    main = "setup_test.py",
)
