# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

cc_binary(
    name = "embed_data",
    srcs = ["embed_data.cc"],
)

cc_test(
    name = "embed_data_test",
    srcs = ["embed_data_test.cc"],
    deps = [
        "//build_tools/embed_data/testdata:empty_embed",
        "//build_tools/embed_data/testdata:flat_embed",
        "//build_tools/embed_data/testdata:path_embed",
    ],
)
