# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_python//python:defs.bzl", "py_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

exports_files([
    "amdgpu_device_binaries.py",
])

py_test(
    name = "amdgpu_device_binaries_test",
    srcs = [
        "amdgpu_device_binaries.py",
        "amdgpu_device_binaries_test.py",
    ],
    data = ["//build_tools/amdgpu:target_map.py"],
    main = "amdgpu_device_binaries_test.py",
)
