# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

package(
    default_visibility = ["//:__subpackages__"],
    licenses = ["notice"],
)

exports_files(
    ["iree_spirv_asm_module.cmake"],
    visibility = ["//:__subpackages__"],
)

test_suite(
    name = "spirv_tests",
    tags = ["manual"],
    tests = ["//build_tools/spirv/testdata:spirv_rules_tests"],
)
