# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "execution",
    srcs = ["execution.py"],
)

py_test(
    name = "execution_unit_test",
    srcs = [
        "execution.py",
        "execution_test.py",
    ],
    main = "execution_test.py",
)

exports_files([
    "execution.py",
    "execution_main.py",
])
