# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_python//python:defs.bzl", "py_binary", "py_test")

exports_files(
    [
        "wasm_node_test_runner.sh",
        "wasm_test_main.mjs",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "wasm_binary_bundler",
    srcs = ["wasm_binary_bundler.py"],
    main = "wasm_binary_bundler.py",
    visibility = ["//visibility:public"],
)

py_test(
    name = "wasm_binary_bundler_test",
    srcs = [
        "wasm_binary_bundler.py",
        "wasm_binary_bundler_test.py",
    ],
    imports = ["."],
    main = "wasm_binary_bundler_test.py",
)
