# Copyright 2026 The HRX Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//build_tools/amdgpu:binary.bzl", "iree_amdgpu_binary_variants_embed_data")
load("//libhrx/build_tools/bazel:cc.bzl", "hrx_cc_library")
load("//libhrx/build_tools/bazel:cts.bzl", "hrx_cts_test")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

AMD_GPU_CTS_TAGS = ["runtime-resource=amd-gpu"]

iree_amdgpu_binary_variants_embed_data(
    name = "amdgpu_executable_noop_kernels",
    testonly = True,
    srcs = ["tests/executable/noop_kernel.c"],
    binary_name_prefix = "hrx_cts_noop_kernel",
    c_file_output = "amdgpu_executable_noop_kernels.c",
    h_file_output = "amdgpu_executable_noop_kernels.h",
    identifier = "hrx_cts_amdgpu_executable_noop_kernels",
    tags = ["manual"],
    target = "amdgcn-amd-amdhsa",
    target_selectors_flag = "//runtime/src/iree/hal/drivers/amdgpu:targets",
)

hrx_cc_library(
    name = "core",
    srcs = [
        "core/hrx_loader.cpp",
        "core/main.cpp",
    ],
    hdrs = [
        "core/hrx_loader.hpp",
        "core/hrx_test_fixture.hpp",
    ],
    copts = [
        "-fexceptions",
    ],
    cxxopts = [
        "-fexceptions",
    ],
    includes = [
        "../include",
        "core",
    ],
    deps = [
        "//build_tools:dl",
        "//third_party:catch2",
    ],
)

hrx_cts_test(
    name = "host_allocator",
    srcs = ["tests/host_allocator/host_allocator_test.cpp"],
)

hrx_cts_test(
    name = "lifecycle",
    srcs = ["tests/lifecycle/lifecycle_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "device",
    srcs = ["tests/device/device_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "allocator",
    srcs = ["tests/allocator/allocator_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "semaphore",
    srcs = ["tests/semaphore/semaphore_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "stream",
    srcs = ["tests/stream/stream_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "memory",
    srcs = ["tests/memory/memory_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "transfer",
    srcs = ["tests/transfer/transfer_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "stream_ops",
    srcs = ["tests/stream_ops/stream_ops_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "executable",
    srcs = ["tests/executable/executable_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
    deps = [
        ":amdgpu_executable_noop_kernels",
        "//build_tools/amdgpu:target_map_h",
    ],
)

hrx_cts_test(
    name = "queue_ops",
    srcs = ["tests/queue_ops/queue_ops_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "status",
    srcs = ["tests/status/status_test.cpp"],
)

hrx_cts_test(
    name = "refcount",
    srcs = ["tests/refcount/refcount_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "virtual_memory",
    srcs = ["tests/virtual_memory/virtual_memory_test.cpp"],
    tags = AMD_GPU_CTS_TAGS,
)

hrx_cts_test(
    name = "cxx_api",
    srcs = ["tests/cxx_api/cxx_api_test.cpp"],
    deps = [
        "//libhrx/src/libhrx:hrx_static",
    ],
)
