# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("@rules_python//python:defs.bzl", "py_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

py_test(
    name = "presubmit_test",
    srcs = [
        "presubmit.py",
        "presubmit_test.py",
    ],
    deps = ["//build_tools/devtools"],
)
